--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -6,7 +6,7 @@
   background-color: #f9f9fa;
   padding: 20px 50px;
   box-sizing: border-box;
-  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  border-top: var(--border);
 }
 
 .nav__list {
@@ -20,29 +20,12 @@
 }
 
 .nav__notification {
-  background-color: tomato;
-  width: 26px;
-  height: 26px;
-  border-radius: 13px;
-  /* width /2 = border-radius = 동그란 모양 */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-weight: 600;
   position: absolute;
   left: 15px;
   bottom: 15px;
 }
 
 .nav__setting {
-  background-color: tomato;
-  width: 7px;
-  height: 7px;
-  border-radius: 3.5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: absolute;
   left: 30px;
   top: -15px;
