--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -2,11 +2,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 40px 25px;
+  padding: var(--horizontal-space);
+  margin-bottom: 15px;
 }
 
 .screen-header__title {
-  font-size: 32px;
+  font-size: 35px;
   font-weight: 600;
 }
 
