--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,12 +1,12 @@
 .status-bar {
-  position: fixed;
+  position: sticky;
+  /* 보미가 해결해줌.. 천재인가 */
   top: 0;
+  box-sizing: border-box;
   width: 100%;
-
   display: flex;
   justify-content: center;
   padding: 5px 3px;
-  box-sizing: border-box;
 }
 
 .status-bar__column {
@@ -21,6 +21,7 @@
 .status-bar__column:last-child {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
 }
 
 .status-bar__column .fa-battery-full {
