--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -14,3 +14,17 @@
 .screen-header__icons span {
   margin-left: 25px;
 }
+
+.screen-header__icons {
+  position: relative;
+}
+
+.screen-header__link:last-child span {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: tomato;
+  position: absolute;
+  left: 73px;
+  top: -12px;
+}
