--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -50,9 +50,19 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  position: relative;
 }
 
 .user-component__time {
   margin-bottom: 9px;
   display: block;
+}
+
+.user-component__notification {
+  position: absolute;
+  width: 26px;
+  height: 26px;
+  border-radius: 13px;
+  left: 15px;
+  bottom: -20px;
 }
